<resources>
    <string name="app_name">GachonGO-AOS</string>
    <string name="binding_error">Binding not initialized to reference the view</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">확인</string>
    <string name="next">다음</string>
    <string name="kakao_login_msg">간편하게 로그인하고\n다양한 서비스를 이용해 보세요</string>

    <!-- 이메일 인증 View -->
    <string name="email_auth_explanation">Gachon Go 사용을 위해선\n학교 이메일 인증이 필요해요.</string>
    <string name="email_auth_check_form">가천대학교 이메일을 입력해주세요</string>
    <string name="email_auth_auth_btn">인증하기</string>
    <string name="email_auth_et_hint1">가천대학교 이메일 입력하기</string>
    <string name="email_auth_et_hint2">인증번호 입력하기</string>

    <!-- 닉네임 입력 View -->
    <string name="nickname_explanation">사용하실 닉네임을\n입력해주세요!</string>
    <string name="nickname_et_hint">닉네임 입력하기</string>
    <string name="nickname_duplicate">중복된 닉네임이에요</string>

    <!-- ~님 환영합니다 View -->
    <string name="welcome_message1"> 님,</string>
    <string name="welcome_message2">너와 나, Gachon Go! 에\n오신걸 환영해요!</string>

    <!-- 마이페이지 -->
    <string name="my_page_point_balance">포인트 잔액:</string>
    <string name="my_page_point_unit">P</string>
    <string name="my_page_order">주문</string>
    <string name="my_page_delivery">배달</string>
    <string name="my_page_post">게시글</string>
    <string name="my_page_edit_btn">편집</string>
    <string name="my_page_point_manage_btn">포인트 관리</string>
    <string name="my_page_activity_history">활동 내역</string>
    <string name="my_page_activity_history_explanation">다양한 곳에 배달을 하여 뱃지를 모을 수 있어요.</string>

    <!-- 프로필 편집 -->
    <string name="my_page_edit">프로필 편집</string>
    <string name="my_page_edit_finish">완료</string>

    <!-- 포인트 관리 -->
    <string name="point_manage">포인트 관리</string>
    <string name="holding_point">보유 포인트</string>
    <string name="charging">충전</string>
    <string name="point_history">적립/사용 내역 </string>
    <string name="point_charge">포인트 충전</string>
    <string name="charge_amount">충전 금액</string>
    <string name="after_charge">충전 후 금액</string>
    <string name="finish_charge">충전하기</string>

    <!-- 결제하기 -->
    <string name="pay">결제하기</string>
    <string name="enter_transaction_id">결제를 위해\n상대방의 거래 ID를\n입력해주세요!</string>
    <string name="hint_transaction_id">AaBbCc</string>
    <string name="check_transaction_id">잘못된 거래 ID입니다.</string>
    <string name="transaction_my_id">내 거래 ID :</string>
    <string name="enter_amount_pay">결제할 금액을\n입력해주세요!</string>
    <string name="pay_amount">결제 금액</string>
    <string name="success_pay">성공적으로\n결제가 완료되었습니다!</string>

    <!-- 알람 -->
    <string name="alarm_today">오늘</string>
    <string name="alarm_yesterday">어제</string>
    <string name="alarm_past">오래 전</string>
    <string name="title_activity_want_write">WantWriteActivity</string>
</resources>