<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/code_pay_main_cl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/transaction_top_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <ImageView
            android:id="@+id/transaction_back_iv"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/transaction_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="22dp"
            android:text="@string/pay"
            android:textColor="@color/gray900"
            style="@style/PretendardBold20"
            app:layout_constraintStart_toEndOf="@id/transaction_back_iv"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/transaction_explanation_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="37dp"
        android:text="@string/enter_transaction_id"
        style="@style/PretendardMedium20"
        android:textColor="@color/gray900"
        app:layout_constraintTop_toBottomOf="@id/transaction_top_cl"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/transaction_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="60dp"
        android:textColor="@color/gray800"
        style="@style/PretendardMedium18"
        android:hint="@string/hint_transaction_id"
        android:textColorHint="@color/gray400"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/transaction_explanation_tv"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/transaction_my_id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/transaction_my_id"
        android:textColor="@color/gray900"
        style="@style/PretendardSemibold16"
        app:layout_constraintTop_toBottomOf="@id/transaction_et"
        app:layout_constraintEnd_toStartOf="@id/transaction_id_tv" />

    <TextView
        android:id="@+id/transaction_id_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        tools:text="1111"
        android:textColor="@color/blue400"
        style="@style/PretendardSemibold16"
        app:layout_constraintEnd_toEndOf="@id/transaction_et"
        app:layout_constraintTop_toTopOf="@id/transaction_my_id_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/transaction_next_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/bg_blue_100_radius_15"
        android:text="@string/next"
        android:textColor="@color/gray800"
        style="@style/PretendardSemibold20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>