<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/nickname_back_iv"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_back"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="23dp" />
    
    <TextView
        android:id="@+id/nickname_explanation_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nickname_explanation"
        android:fontFamily="@font/pretendard_semibold"
        android:textSize="20sp"
        android:textColor="@color/gray900"
        app:layout_constraintTop_toBottomOf="@id/nickname_back_iv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginStart="37dp" />
    
    <EditText
        android:id="@+id/nickname_et"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:hint="@string/nickname_et_hint"
        android:fontFamily="@font/pretendard_medium"
        android:textSize="18sp"
        android:textColor="@color/gray400"
        app:layout_constraintTop_toBottomOf="@id/nickname_explanation_tv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="60dp" />

    <ImageView
        android:id="@+id/nickname_check_iv"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_check_disabled"
        app:layout_constraintTop_toTopOf="@id/nickname_et"
        app:layout_constraintEnd_toEndOf="@id/nickname_et"
        android:layout_marginTop="6dp"/>
    
    <TextView
        android:id="@+id/email_auth_email_check_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/pretendard_medium"
        android:text="@string/nickname_duplicate"
        android:textColor="@color/error"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@id/nickname_et"
        app:layout_constraintStart_toStartOf="@id/nickname_et"
        android:visibility="gone"
        android:layout_marginStart="4dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/email_auth_next_btn"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginHorizontal="30dp"
        android:background="@drawable/bg_button_next_default"
        android:fontFamily="@font/pretendard_semibold"
        android:text="@string/next"
        android:textColor="@color/gray800"
        android:textSize="20sp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>