<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/my_page_sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    android:overScrollMode="never">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/my_page_main_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gray200">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/my_page_top_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="18dp"
            android:paddingHorizontal="21dp"
            android:background="@color/gray050"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/my_page_profile_iv"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@color/gray200"
                android:scaleType="center"
                android:src="@drawable/bg_button_default"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_mutate_background="true"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/my_page_nickname_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="21dp"
                tools:text="김똘똘"
                android:textColor="@color/gray900"
                style="@style/PretendardSemibold18"
                app:layout_constraintTop_toTopOf="@id/my_page_profile_iv"
                app:layout_constraintStart_toEndOf="@id/my_page_profile_iv" />

            <LinearLayout
                android:id="@+id/my_page_point_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="4dp"
                app:layout_constraintTop_toBottomOf="@id/my_page_nickname_tv"
                app:layout_constraintStart_toStartOf="@id/my_page_nickname_tv">

                <TextView
                    android:id="@+id/my_page_point_balance_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_page_point_balance"
                    android:textColor="@color/gray900"
                    style="@style/PretendardMedium14" />

                <TextView
                    android:id="@+id/my_page_point_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    tools:text="99,999"
                    android:textColor="@color/gray900"
                    style="@style/PretendardMedium14" />

                <TextView
                    android:id="@+id/my_page_point_unit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_page_point_unit"
                    android:textColor="@color/gray900"
                    style="@style/PretendardMedium14" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/my_page_info_ly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/my_page_nickname_tv"
                app:layout_constraintBottom_toBottomOf="@id/my_page_profile_iv">

                <LinearLayout
                    android:id="@+id/my_page_info_order_ly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/my_page_info_order_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_page_order"
                        android:textColor="@color/gray900"
                        style="@style/PretendardMedium14" />

                    <TextView
                        android:id="@+id/my_page_info_order_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        tools:text="12"
                        android:textColor="@color/gray900"
                        style="@style/PretendardMedium14" />

                </LinearLayout>

                <View
                    android:id="@+id/my_page_order_and_delivery_divider"
                    android:layout_width="1dp"
                    android:layout_height="8dp"
                    android:layout_marginStart="7dp"
                    android:background="@color/gray400"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:id="@+id/my_page_info_delivery_ly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="7dp" >

                    <TextView
                        android:id="@+id/my_page_info_delivery_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_page_delivery"
                        android:textColor="@color/gray900"
                        style="@style/PretendardMedium14" />

                    <TextView
                        android:id="@+id/my_page_info_delivery_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        tools:text="3"
                        android:textColor="@color/gray900"
                        style="@style/PretendardMedium14" />

                </LinearLayout>

                <View
                    android:id="@+id/my_page_delivery_and_post_divider"
                    android:layout_width="1dp"
                    android:layout_height="8dp"
                    android:layout_marginStart="7dp"
                    android:background="@color/gray400"
                    android:layout_gravity="center" />

                <LinearLayout
                    android:id="@+id/my_page_info_post_ly"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginStart="7dp" >

                    <TextView
                        android:id="@+id/my_page_info_post_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/my_page_post"
                        android:textColor="@color/gray900"
                        style="@style/PretendardMedium14" />

                    <TextView
                        android:id="@+id/my_page_info_post_count_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        tools:text="16"
                        android:textColor="@color/gray900"
                        style="@style/PretendardMedium14" />

                </LinearLayout>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/my_page_edit_btn"
                android:layout_width="64dp"
                android:layout_height="36dp"
                android:text="@string/my_page_edit_btn"
                android:textColor="@color/gray900"
                style="@style/PretendardMedium14"
                android:background="@drawable/bg_blue_100_radius_15"
                android:stateListAnimator="@null"
                app:layout_constraintTop_toTopOf="@id/my_page_profile_iv"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/my_page_point_manage_btn"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="24dp"
                android:text="@string/my_page_point_manage_btn"
                android:textColor="@color/gray050"
                style="@style/PretendardMedium16"
                android:background="@drawable/bg_blue_400"
                android:stateListAnimator="@null"
                app:layout_constraintTop_toBottomOf="@id/my_page_profile_iv"
                app:layout_constraintStart_toStartOf="@id/my_page_profile_iv"
                app:layout_constraintEnd_toEndOf="@id/my_page_edit_btn" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/my_page_activity_history_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@color/gray050"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/my_page_top_cl"
            app:layout_constraintBottom_toBottomOf="parent" >

            <TextView
                android:id="@+id/my_page_activity_history_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                android:layout_marginHorizontal="24dp"
                android:text="@string/my_page_activity_history"
                android:textColor="@color/gray900"
                style="@style/PretendardSemibold18"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/my_page_activity_history_explanation_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/my_page_activity_history_explanation"
                android:textColor="@color/gray900"
                style="@style/PretendardMedium14"
                app:layout_constraintTop_toBottomOf="@id/my_page_activity_history_tv"
                app:layout_constraintStart_toStartOf="@id/my_page_activity_history_tv" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/my_page_activity_history_rv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="21dp"
                app:layout_constraintTop_toBottomOf="@id/my_page_activity_history_explanation_tv"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                app:spanCount="3"
                tools:itemCount="21"
                tools:listitem="@layout/item_activity_history"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>