<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/point_manage_sv"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:fillViewport="true"
    android:overScrollMode="never"
    tools:context="com.example.gachongo.presentation.main.mypage.PointManageActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/point_manage_main_cl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/point_manage_top_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="22dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" >

            <ImageView
                android:id="@+id/point_manage_back_iv"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="20dp"
                android:src="@drawable/ic_back"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/point_manage_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="22dp"
                android:text="@string/point_manage"
                android:textColor="@color/gray900"
                style="@style/PretendardBold20"
                app:layout_constraintStart_toEndOf="@id/point_manage_back_iv"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/point_manage_holding_point_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="15dp"
            android:padding="21dp"
            android:background="@drawable/bg_blue_100_radius_15"
            app:layout_constraintTop_toBottomOf="@id/point_manage_top_cl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" >

            <TextView
                android:id="@+id/point_manage_holding_point_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/holding_point"
                android:textColor="@color/gray900"
                style="@style/PretendardMedium20"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/point_manage_point_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                tools:text="99,999"
                android:textColor="@color/gray900"
                style="@style/PretendardBold20"
                app:layout_constraintTop_toBottomOf="@id/point_manage_holding_point_tv"
                app:layout_constraintStart_toStartOf="@id/point_manage_holding_point_tv" />

            <TextView
                android:id="@+id/point_manage_point_unit_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/my_page_point_unit"
                android:textColor="@color/gray900"
                style="@style/PretendardBold20"
                app:layout_constraintTop_toTopOf="@id/point_manage_point_tv"
                app:layout_constraintStart_toEndOf="@id/point_manage_point_tv" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/point_manage_charging_btn"
                android:layout_width="56dp"
                android:layout_height="28dp"
                android:background="@drawable/bg_gray_50"
                android:text="@string/charging"
                android:textColor="@color/gray900"
                style="@style/PretendardSemibold12"
                app:layout_constraintBottom_toBottomOf="@id/point_manage_point_tv"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/point_manage_history_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:text="@string/point_history"
            android:textColor="@color/gray900"
            style="@style/PretendardBold18"
            app:layout_constraintTop_toBottomOf="@id/point_manage_holding_point_cl"
            app:layout_constraintStart_toStartOf="parent" />

        <View
            android:id="@+id/point_manage_history_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="14dp"
            android:background="@color/gray200"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/point_manage_history_tv" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/point_manage_history_rv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/point_manage_history_divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:spanCount="3"
            tools:itemCount="10"
            tools:listitem="@layout/item_point_history"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>